Updated Not Fixed Login-Signup 5 Aug

--- a/Kampus/index.html
+++ b/Kampus/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/Kampus/css/navbar.css">
-    <link rel="stylesheet" type="text/css" href="/Kampus/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
     <title>Kampus Malang</title>
@@ -109,7 +109,7 @@
     </footer>
 
 
-    <script src="/Kampus/js/kampus.js"></script>
-    <script src="/Kampus/js/navbar.js"></script>
+    <script src="/js/kampus.js"></script>
+    <script src="/js/navbar.js"></script>
 </body>
 </html>
