Updated Not Fixed All

--- a/Kampus/index.html
+++ b/Kampus/index.html
@@ -29,13 +29,13 @@
                     <a href="#course"><li>Our Program</li></a>
                     <a href="#contact"><li>Contact</li></a>
                     <div class="login-signup">
-                        <a href="/Kampus/signup.html">
+                        <a href="signup.html">
                             <button class="button-signup type1">
                             <span class="btn-txt-signup">Signup</span>
                         </button>
                         </a>
 
-                        <a href="/Kampus/login.html">
+                        <a href="login.html">
                             <button class="button-login">Login</button>
                         </a>
                     </div>
