Updated Login-Signup Page 7 Agustus 2023

--- a/Kampus/login.html
+++ b/Kampus/login.html
@@ -39,7 +39,7 @@
 
             <div class="sign">
                 <div class="up">
-                    <label><a href="/Kampus/index.html">Signup</a></label>
+                    <label><a href="/signup.html">Signup</a></label>
                 </div>
             </div>
         </div>
