--- a/Kampus/signup.html
+++ b/Kampus/signup.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/signup.css">
-    <title>Kampus Malang Login Page</title>
+    <title>Kampus Malang Signup Page</title>
 </head>
 <body>
     <div class="box">
         <div class="container">
             <div class="top-header">
-                <span>Have an account?</span>
-                <header>Login</header>
+                <span>Dont Have Account ?</span>
+                <header>Sign Up</header>
             </div>
 
             <div class="input-field">
@@ -24,7 +24,7 @@
                 <i class="bx bx-lock-alt"></i>
             </div>
             <div class="input-field">
-                <input type="submit" class="submit" value="Login">
+                <input type="submit" class="submit" value="Signup">
             </div>
 
             <div class="bottom">
@@ -39,7 +39,7 @@
 
             <div class="sign">
                 <div class="up">
-                    <label><a href="/Kampus/index.html">Signup</a></label>
+                    <label><a href="/login.html">Login</a></label>
                 </div>
             </div>
         </div>
