Updated Favicon 7 Agustus 2023

--- a/Kampus/index.html
+++ b/Kampus/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/navbar.css">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
     <title>Kampus Malang</title>
 </head>
